# TaskTracker

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg
config/: settings.py  settings_test.py  urls.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/management/commands/: populate_db.py
tasks/migrations/: 0001_initial.py  0002_task_tasks_task_status_a6a8c8_idx_and_more.py  0003_alter_task_assignee.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
